plugins/core/src/snapshots/plugins_core__building__tests__it_describes_area.snap
---
source: plugins/core/src/building.rs
expression: reply.to_debug_json()?
---
{
  "editorReply": {
    "editing": {
      "markdown": "Welcome Area\n\n~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n\n"
    },
    "key": "E-2"
  }
}
