plugins/core/src/snapshots/plugins_core__building__tests__it_edits_items_by_gid.snap
---
source: plugins/core/src/building.rs
expression: reply.to_json()?
---
{
  "basicReply": {
    "editor": {
      "editing": {
        "json": {
          "acls": {
            "rules": []
          },
          "creator": null,
          "identity": {
            "private": "",
            "public": "",
            "signature": null
          },
          "key": "E-0",
          "klass": {
            "py/type": ""
          },
          "parent": null,
          "scopes": {
            "containing": {
              "capacity": null,
              "holding": [],
              "produces": {}
            },
            "occupying": {
              "area": {
                "gid": 3,
                "key": "E-1",
                "klass": "",
                "name": "Welcome Area"
              }
            },
            "props": {
              "props": {
                "map": {
                  "gid": {
                    "acls": {
                      "rules": []
                    },
                    "value": 1
                  },
                  "name": {
                    "acls": {
                      "rules": []
                    },
                    "value": "Living"
                  }
                }
              }
            }
          }
        }
      },
      "key": "E-0"
    }
  }
}
