plugins/core/src/snapshots/plugins_core__building__tests__it_edits_items_named.snap
---
source: plugins/core/src/building.rs
expression: reply.to_json()?
---
{
  "editor": {
    "editing": {
      "json": {
        "acls": {
          "rules": []
        },
        "creator": null,
        "identity": {
          "private": "",
          "public": "",
          "signature": null
        },
        "key": "E-2",
        "klass": {
          "py/type": ""
        },
        "parent": null,
        "scopes": {
          "location": {
            "container": {
              "gid": 3,
              "key": "E-1",
              "klass": "",
              "name": "Welcome Area"
            }
          },
          "props": {
            "props": {
              "map": {
                "gid": {
                  "acls": {
                    "rules": []
                  },
                  "value": 4
                },
                "name": {
                  "acls": {
                    "rules": []
                  },
                  "value": "Cool Broom"
                }
              }
            }
          }
        },
        "version": {
          "i": 2
        }
      }
    },
    "key": "E-2"
  }
}
